--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -36,6 +36,12 @@
         <ion-item nav-clear menu-close href="#/app/courses">
           Courses
         </ion-item>
+        <ion-item nav-clear menu-close href="#/sign_in">
+          SignIn
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/courses/1">
+          course
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
