--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -1,12 +1,10 @@
 
 <ion-view view-title="Media">
   <ion-content>
-    {{media}}
-
+    {{media.title}}
       <section ng-show="media.audio.url">
       <audio controls ng-src="{{getMediaUrl(media.audio.url)}}" media:element style="width:100%;height:100%;"> </audio>
       </section>
-
   </ion-content>
 </ion-view>
 
