--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -7,7 +7,7 @@
     </ion-item>
     <section class="item" ng-show="media.audio.url">
       <audio controls ng-src="{{getMediaUrl(media.audio.url)}}" media:element style="width:100%;height:100%;"> </audio>
-      <button class="button button-full button-balanced" ng-click="togglePlay()"> Play/Pause </button>
+      <button class="button button-full button-balanced" ng-click="togglePlay()">Play</button>
     </section>
     </ion-list>
   </ion-content>
