--- a/www/templates/courses.html
+++ b/www/templates/courses.html
@@ -5,9 +5,9 @@
     <ion-item ng-repeat="course in courses" ui-sref="app.course({courseId: course.id})">
         {{course.title}}
       </ion-item>
-      <ion-item ng-click="reloadYs()">
+      <!--<ion-item ng-click="reloadYs()">
         Refresh
-      </ion-item>
+      </ion-item>-->
     </ion-list>
   </ion-content>
 </ion-view>
