switching to api/v2

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,11 @@
 /* Empty. Add your own CSS if you like */
 
+
+a:hover{
+  text-decoration: none !important;
+  color: inherit;
+}
+
 .sri_yantra{
   width: 96px;
   margin: 0 auto 10px;
