--- a/www/css/style.css
+++ b/www/css/style.css
@@ -38,13 +38,17 @@ a:hover{
 
 
 .profile-img {
-  width: 96px;
-  height: 96px;
+  width: 118px;
+  height: 118px;
   margin: 0 auto 10px;
   display: block;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
+  /* width: 96px; */
+  /* height: 96px; */
+  /* margin: 0 auto 10px; */
+  /* display: block; */
+  /* -moz-border-radius: 50%; */
+  /* -webkit-border-radius: 50%; */
+  /* border-radius: 50%; */
 }
 
 .sign-in-image{
