--- a/www/templates/login.user.html
+++ b/www/templates/login.user.html
@@ -8,7 +8,7 @@
     
     <div class="center-block sign-in-image">
       <!--<img ng-src="img/sri_yantra.png" alt="sri_yantra" class="sri_yantra">-->
-      <img class="profile-img" ng-src="img/profile_img.png" alt="">
+      <img class="profile-img" ng-src="img/login.png" alt="">
     </div>
 
     <form ng-submit="submitLogin(loginForm)">
@@ -25,7 +25,7 @@
           <input type="password" name="password" placeholder="Password" ng-model="loginForm.password" required="required" class=""/>
         </label>
 
-        <button type="submit" class="button button-block button-positive sign-in-button">Sign in</button>
+        <button type="submit" class="button button-block button-balanced sign-in-button">Sign in</button>
 
       </div>
 
