--- a/www/templates/course.html
+++ b/www/templates/course.html
@@ -1,5 +1,5 @@
 
-<ion-view view-title="Chapters">
+<ion-view view-title="Chapitres">
   <ion-content>
     <ion-item class="item item-divider">
     {{course.title}}
