--- a/www/templates/courses.html
+++ b/www/templates/courses.html
@@ -1,5 +1,5 @@
 
-<ion-view view-title="Courses">
+<ion-view view-title="Cours">
   <ion-content>
     <ion-list>
     <ion-item ng-repeat="course in courses" ui-sref="app.course({courseId: course.id})">
