--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,13 +22,13 @@
         </div>
       <ion-list>
         <ion-item nav-clear menu-close ng-click="login()" ng-show="!user.signedIn">
-          Signin
+          Login
         </ion-item>
         <ion-item nav-clear menu-close ng-click="signOut()" ng-show="user.signedIn">
-          Signout
+          Déconnexion
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/courses">
-          Courses
+          Cours
         </ion-item>
         <ion-item nav-clear menu-close ng-click="changeLocale('fr')" ng-show="locale == 'en'">
           Change locale to fr
