--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -28,7 +28,7 @@
           Déconnexion
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/courses">
-          Cours
+          Liste des Cours
         </ion-item>
         <ion-item nav-clear menu-close ng-click="changeLocale('fr')" ng-show="locale == 'en'">
           Change locale to fr
