--- a/www/templates/courses.html
+++ b/www/templates/courses.html
@@ -1,13 +1,18 @@
 
-<ion-view view-title="Cours">
+<ion-view view-title="Bienvenue sur Yogic-Sadhana">
   <ion-content>
+
+    <ion-item class="item item-divider text-center">
+      Liste des cours
+    </ion-item>
+
     <ion-list>
-    <ion-item ng-repeat="course in courses" ui-sref="app.course({courseId: course.id})">
-        {{course.title}}
+      <ion-item class="item item-thumbnail-left" ng-repeat="course in courses" ui-sref="app.course({courseId: course.id})">
+        <img ng-src="https://yogic-sadhana.com{{course.picture.url}}" alt=""/>
+        <h2 class="header-h2">{{course.title}}</h2>
+        <p>{{course.description}}</p>
       </ion-item>
-      <!--<ion-item ng-click="reloadYs()">
-        Refresh
-      </ion-item>-->
     </ion-list>
+
   </ion-content>
 </ion-view>
